--- a/zook.conf
+++ b/zook.conf
@@ -2,25 +2,50 @@
     port       = 8080
     # To run multiple services, list them separated by commas, like:
     #  http_svcs = first_svc, second_svc
-    http_svcs  = zookfs_svc
+#    http_svcs  = zookfs_svc
+#-------------For exercise-4------------------------------
+    http_svcs = static_svc, dynamic_svc
+#---------------------------------------------------------
     extra_svcs = echo_svc
 
+#---------Made some changes in the original one for exercise2----------------
 [zookd]
     cmd = zookd
     uid = 61011
     gid = 61011
     dir = /jail
+#----------------------------------------------------------------------------
 
-[zookfs_svc]
-    cmd = zookfs
-    url = .*
-    uid = 61012
-    gid = 61012
-    dir = /jail
+#---------Made some changes in the original one for exercise3----------------
+#[zookfs_svc]
+#    cmd = zookfs
+#    url = .*
+#    uid = 61012
+#    gid = 61012
+#    dir = /jail
     # You can control what executables zookfs will run as CGI scripts
     # by specifying the UID/GID of allowed CGI executables, as follows;
     # uncomment and replace 123 and 456 with your intended UID and GID:
     #args = 123 456
+#-----------------------------------------------------------------------------
+
+#---------New configs for exercise-4------------------------------------------
+[static_svc]
+    cmd = zookfs
+    url = (/|.*\.(jpeg|jpg|html|css|js))
+    uid = 61013
+    gid = 61013
+    dir = /jail
+    args = 123 456
+
+[dynamic_svc]
+    cmd = zookfs
+    url = (.*\.cgi.*)
+    uid = 61014
+    gid = 61014
+    dir = /jail
+    args = 61015 61015
+#------------------------------------------------------------------------------
 
 [echo_svc]
     cmd = /zoobar/echo-server.py
