--- a/zook.conf
+++ b/zook.conf
@@ -6,7 +6,7 @@
 #-------------For exercise-4------------------------------
     http_svcs = static_svc, dynamic_svc
 #---------------------------------------------------------
-    extra_svcs = echo_svc
+    extra_svcs = echo_svc, auth_svc
 
 #---------Made some changes in the original one for exercise2----------------
 [zookd]
@@ -33,18 +33,27 @@
 [static_svc]
     cmd = zookfs
     url = (/|.*\.(jpeg|jpg|html|css|js))
-    uid = 61013
-    gid = 61013
+    uid = 61013 #61014 61013
+    gid = 61013 #61014 61013
     dir = /jail
     args = 123 456
 
 [dynamic_svc]
     cmd = zookfs
     url = (.*\.cgi.*)
-    uid = 61014
-    gid = 61014
+    uid = 61014 #61013 61012
+    gid = 61014 #61013 61012
     dir = /jail
     args = 61015 61015
+#------------------------------------------------------------------------------
+
+#-----------auth_svc implementation for exercise-5-----------------------------
+[auth_svc]
+    cmd = /zoobar/auth-server.py
+    args = /authsvc/sock
+    dir = /jail
+    uid = 61016 #61015 
+    gid = 61014 #61012 So that dynamic_svc can communicate with auth_svc. Proper perm initialized in setup.sh
 #------------------------------------------------------------------------------
 
 [echo_svc]
