--- a/zook.conf
+++ b/zook.conf
@@ -6,7 +6,7 @@
 #-------------For exercise-4------------------------------
     http_svcs = static_svc, dynamic_svc
 #---------------------------------------------------------
-    extra_svcs = echo_svc, auth_svc
+    extra_svcs = echo_svc, auth_svc, bank_svc
 
 #---------Made some changes in the original one for exercise2----------------
 [zookd]
@@ -53,6 +53,15 @@
     args = /authsvc/sock
     dir = /jail
     uid = 61016 #61015 
+    gid = 61014 #61012 So that dynamic_svc can communicate with auth_svc. Proper perm initialized in setup.sh
+#------------------------------------------------------------------------------
+
+#-----------bank_svc implementation for exercise-7-----------------------------
+[bank_svc]
+    cmd = /zoobar/bank-server.py
+    args = /banksvc/sock
+    dir = /jail
+    uid = 61017 #61016 
     gid = 61014 #61012 So that dynamic_svc can communicate with auth_svc. Proper perm initialized in setup.sh
 #------------------------------------------------------------------------------
 
