Exercise-9 completed! This was easy! :)

--- a/zook.conf
+++ b/zook.conf
@@ -6,7 +6,7 @@
 #-------------For exercise-4------------------------------
     http_svcs = static_svc, dynamic_svc
 #---------------------------------------------------------
-    extra_svcs = echo_svc, auth_svc, bank_svc
+    extra_svcs = echo_svc, auth_svc, bank_svc, profile_svc
 
 #---------Made some changes in the original one for exercise2----------------
 [zookd]
@@ -64,6 +64,16 @@
     uid = 61017 #61016 
     gid = 61014 #61012 So that dynamic_svc can communicate with auth_svc. Proper perm initialized in setup.sh
 #------------------------------------------------------------------------------
+
+#-----------profile_svc implementation for exercise-9-----------------------------
+[profile_svc]
+    cmd = /zoobar/profile-server.py
+    args = /profilesvc/sock
+    dir = /jail
+    uid = 0 #61016 
+    gid = 61014 #61012 So that dynamic_svc can communicate with auth_svc. Proper perm initialized in setup.sh
+#------------------------------------------------------------------------------
+
 
 [echo_svc]
     cmd = /zoobar/echo-server.py
